# mc

./: .gitignore
django/: pyproject.toml
djangoapp/: pyproject.toml
script/bar/: start
script/foo/: start
