[tool.poetry]
name = "djangoapp"
version = "0.0.1"
description = "App for intercom interview"
authors = ["mehernosh <mehernosh@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
django = "2.2.13"
django-cors-headers = "2.5.3"
pre-commit = "^2.17.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
